<resources>
    <string name="app_name">Project 2.4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Register</string>
    <string name="menu_account">Account</string>
    <string name="menu_myEvents">My Events</string>
    <string name="menu_friendsEvents">Friends Events</string>
    <string name="menu_friends">Friends</string>


    <string name="event_name">Naam</string>
    <string name="event_adres">Adres</string>
    <string name="event_begin">Begin</string>
    <string name="event_einde">Eindigt</string>
    <string name="event_maker">Organisator</string>


    <!--Login Activity-->

    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Login</string>

    <!--Register Activity-->

    <string name="register_username_hint">Username</string>
    <string name="register_password_hint">Password</string>
    <string name="register_password_repeat_hint">Password Repeat</string>
    <string name="register_email_hint">Email</string>
    <string name="register_button">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
