<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_myEvents"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_myEvents" />
        <item
            android:id="@+id/nav_friendsEvents"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_friendsEvents" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_friends" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
